add adapter having images and colors

--- a/adapter/src/main/res/values/ids.xml
+++ b/adapter/src/main/res/values/ids.xml
@@ -25,4 +25,61 @@
     <item name="tvDiscountDesc" type="id" />
     <item name="tvDiscountInfo" type="id" />
     <item name="tvDiscountCond" type="id" />
+    <item name="tvpkunit" type="id" />
+    <item name="tvpkprice" type="id" />
+    <item name="tvpkmrp" type="id" />
+    <item name="orderitemname" type="id" />
+    <item name="orderitemqnty" type="id" />
+    <item name="orderitemtotal" type="id" />
+    <item name="selPayMethod" type="id" />
+    <item name="selPayDesc" type="id" />
+    <item name="popproitm" type="id" />
+    <item name="popprobgimg" type="id" />
+    <item name="popproname" type="id" />
+    <item name="popprodesc" type="id" />
+    <item name="tvcatname" type="id" />
+    <item name="sales_category_cardview" type="id" />
+    <item name="selectedOne" type="id" />
+    <item name="showQtyWant" type="id" />
+    <item name="tv_mrp" type="id" />
+    <item name="tv_sp" type="id" />
+    <item name="tv_dic" type="id" />
+    <item name="tv_qty" type="id" />
+    <item name="tv_per_qty" type="id" />
+    <item name="itmqnty" type="id" />
+    <item name="itmadd" type="id" />
+    <item name="itmdec" type="id" />
+    <item name="buttonAdd" type="id" />
+    <item name="tvvendname" type="id" />
+    <item name="tvvendtag" type="id" />
+    <item name="tvvendloc" type="id" />
+    <item name="linearLayout" type="id" />
+    <item name="imgvendlogo" type="id" />
+    <item name="imgopensts" type="id" />
+    <item name="tvratingval" type="id" />
+    <item name="tvdiscsts" type="id" />
+    <item name="tvminordval" type="id" />
+    <item name="itemname" type="id" />
+    <item name="brandname" type="id" />
+    <item name="itemprice" type="id" />
+    <item name="itemqnty" type="id" />
+    <item name="itemdesc" type="id" />
+    <item name="itemmaxprice" type="id" />
+    <item name="itempackunit" type="id" />
+    <item name="itemdiscval" type="id" />
+    <item name="itemstocksts" type="id" />
+    <item name="gimgprodprop" type="id" />
+    <item name="imgmultipacksel" type="id" />
+    <item name="card_view" type="id" />
+    <item name="itemadd" type="id" />
+    <item name="btAddItem" type="id" />
+    <item name="itemdec" type="id" />
+    <item name="tagimg1" type="id" />
+    <item name="tagimg2" type="id" />
+    <item name="tagimg4" type="id" />
+    <item name="tagimg3" type="id" />
+    <item name="tagimg5" type="id" />
+    <item name="tvtag1" type="id" />
+    <item name="tvtag2" type="id" />
+    <item name="tvtag3" type="id" />
 </resources>
