add adapter more adapter

--- a/adapter/src/main/res/values/colors.xml
+++ b/adapter/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="tag1Color" />
     <color name="tag2Color" />
     <color name="tag3Color" />
+    <color name="white" />
+    <color name="blue" />
 </resources>
