remove price from orderdetails

--- a/adapter/src/main/res/values/ids.xml
+++ b/adapter/src/main/res/values/ids.xml
@@ -71,6 +71,7 @@
     <item name="gimgprodprop" type="id" />
     <item name="imgmultipacksel" type="id" />
     <item name="card_view" type="id" />
+    <item name="cardView_OutStock" type="id" />
     <item name="itemadd" type="id" />
     <item name="btAddItem" type="id" />
     <item name="itemdec" type="id" />
